--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,13 @@
   <body>
     <div class="main">
       <div class="emoji mb-6">💣🤯💥</div>
-      <button class="button">Boom?</button>
+      <form>
+        <input type="text" name="ccname" class="input" autocomplete="on" />
+        <input type="text" name="cardnumber" class="input" autocomplete="on" />
+        <input type="text" name="cvc" class="input" autocomplete="on" />
+        <input type="text" name="cc-exp" class="input" autocomplete="on" />
+        <button class="button">Boom?</button>
+      </form>
     </div>
   </body>
 </html>
