--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,9 @@
       <div class="emoji mb-6">💣🤯💥</div>
       <form>
         <input type="text" name="ccname" class="input" autocomplete="on" />
-        <input type="text" name="cardnumber" class="input" autocomplete="on" />
-        <input type="text" name="cvc" class="input" autocomplete="on" />
-        <input type="text" name="cc-exp" class="input" autocomplete="on" />
+        <input type="number" name="cardnumber" class="input" autocomplete="on" />
+        <input type="number" name="cvc" class="input" autocomplete="on" />
+        <input type="number" name="cc-exp" class="input" autocomplete="on" />
         <button class="button">Boom?</button>
       </form>
     </div>
